# mprpc

./: CMakeLists.txt  README.md
example/: friend.proto  user.proto
example/callee/: friendservice.cc  userservice.cc
example/caller/: callfriendservice.cc  calluserservice.cc
lib/include/: logger.h  mprpcconfig.h  mprpccontroller.h  zookeeperutil.h
src/: CMakeLists.txt  lockqueue.cc  logger.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  mprpccontroller.cc  rpcprovider.cc  zookeeperutil.cc
src/include/: lockqueue.h  mprpcapplication.h  mprpcchannel.h  rpcprovider.h
test/protobuf/: a.out  main.cc  test.proto
